Add parse pass